Fix supernova layout when aligned to none

--- a/packages/block-library/src/blocks/supernova-item/style.scss
+++ b/packages/block-library/src/blocks/supernova-item/style.scss
@@ -57,7 +57,7 @@
   }
 }
 
-.supernova--card-layout-stacked.supernova--1-columns.alignfull {
+.supernova--card-layout-stacked.supernova--1-columns .nb-collection.alignfull {
 
   .nb-collection__layout:not(.nb-collection__layout--parametric) {
 
